# ImageDisplay_Cpp_cross_platform

./: CMakeLists.txt  PA2_Main.cpp  PA2_README.txt  README.txt  dcscreen.cpp
dependency/wxWidgets/: CMakeLists.txt
src/: Main.cpp  PA1_Main.cpp  PA2_Main.cpp
